<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/app_primary_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <com.qmuiteam.qmui.widget.QMUITopBar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/qmui_topbar_height" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/qmui_config_color_white"
        >


        <ImageView
            android:id="@+id/image_id"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:srcCompat="@drawable/emoji_0023" />

        <com.qmuiteam.qmui.widget.QMUIFontFitTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_gen_success"
            android:gravity="center"
            android:layout_margin="@dimen/qmui_content_spacing_horizontal"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="@dimen/qmui_content_spacing_horizontal">

            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                android:id="@+id/btn_open_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/btn_open_other"
                app:qmui_radius="4dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/qmui_content_spacing_horizontal"
                />

            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/btn_send"
                app:qmui_radius="4dp" />


        </LinearLayout>



    </LinearLayout>

</LinearLayout>